# AsyncTelebotRegistration

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: bot_instance.py  config.py  database.py  main.py  models.py
src/app/: handlers.py  keyboards.py  states.py  text_vars_handlers_.py  translator.py  utils.py
src/app/handlers/: handlers.py
src/app/services/: handle_user_input_errors.py  registration.py
src/app/services/one_reason_handlers/: one_reason.py
src/app/utils/: keyboards.py  utils.py
src/config/: config.py
src/configs/: commands.py  commands.yaml  config.py  keyboard_manager.py
src/database/: CRUD.py  basic.py  database.py  db_sessions.py  models.py  run.py  test_db.py
src/middleware/i18n_middleware/: i18n_base_middleware.py  keyboards.py  my_translator.py
src/middleware/locales/en/LC_MESSAGES/: messages.po
src/middleware/locales/es/LC_MESSAGES/: messages.po
src/middleware/locales/fr/LC_MESSAGES/: messages.po
src/middleware/locales/it/LC_MESSAGES/: messages.po
src/middleware/locales/ru/LC_MESSAGES/: messages.po
src/middlewares/: i18n.py
src/middlewares/locales/en/LC_MESSAGES/: messages.po
src/middlewares/locales/it/LC_MESSAGES/: messages.po
src/middlewares/locales/ru/LC_MESSAGES/: messages.po
src/middlewares/translations/en/LC_MESSAGES/: messages.po
src/middlewares/translations/ru/LC_MESSAGES/: messages.po
